== 0.2.3 2008-09-xx

* Tweaks:
  * Fixed: coping with parameterless yield call
  * Fixed: copes with :self as an expression

== 0.2.2 2008-09-15

* Tweaks:
  * Fixed --version!

== 0.2.1 2008-09-14

* Tweaks:
  * Now works from the source code, instead of requiring each named file
  * Added integration tests that run reek on a couple of gems

== 0.2.0 2008-09-10

* Minor enhancements:
  * Added --help, --version options
  * Added --sort option to sort the report by smell or by code location

== 0.1.1 2008-09-09

* Some tweaks:
  * Fixed report printing for Feature Envy when the receiver is a block
  * Fixed: successive iterators reported as nested
  * Fixed: Long Method now reports the total length of the method
  * Fixed: each smell reported only once

== 0.1.0 2008-09-09

* 1 minor enhancement:
  * Added a check for nested iterators within a method
* Some tweaks:
  * Begun adding some rdoc
  * Split some of the specs into more meaningful chunks
  * Updated the rakefile so that rcov is no longer the default

== 0.0.1 2008-09-08

* 1 major enhancement:
  * Initial release